Contribute encounters is working and has its own page with appropriate routing. Currently it adds encounter to DB but does not verify if a beer with that name exists already. Next step will be to add this funtion to the API, as the function calls are already in place in the app script.
