# src/api/beer_api.py
@@ -58,6 +58,14 @@ def contribute():
         return response
 
 
+@api.route(SWAGGER_URL + "/contribute_encounter", methods=['GET', 'POST'])
+def contribute_encounter():
+    if request.method == 'POST':
+        encounter_dict = request.json
+        response = add_encounter_to_db(encounter_dict)
+        return response
+
+
 def start_api():
     api.run(host="0.0.0.0", port=8080, debug=True)
 
